--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,61 @@ img {
   max-width: 100%;
 }
 
+.input {
+  background-color: #ffffff;
+  border-radius: 4px;
+  border: none;
+  padding: 0 23px;
+  height: 50px;
+}
+
+.message {
+  background-color: #ffffff;
+  border-radius: 4px;
+  padding: 18px 24px;
+  border: none;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+  resize: none;
+}
+
+.button {
+  outline: none;
+  cursor: pointer;
+  min-width: 160px;
+  min-height: 50px;
+  padding: 18px;
+  border: none;
+  background-color: #EC1F46;
+  color: #ffffff;
+  border-radius: 4px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 15px;
+}
+
+.form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+input {
+  outline: none;
+  cursor: pointer;
+}
+
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 /* Document
    ========================================================================== */
@@ -694,7 +749,7 @@ template {
   color: #ffffff;
   border-radius: 8px;
   width: 350px;
-  min-height: 210px;
+  height: 210px;
   padding: 28px;
   font-family: 'Nunito', sans-serif;
   word-break: break-word;
@@ -775,7 +830,7 @@ template {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin-bottom: 17px;
+  margin-bottom: 13px;
 }
 
 .booking__heading {
@@ -811,7 +866,7 @@ template {
   font-size: 14px;
   line-height: 19px;
   width: 100%;
-  min-height: 45px;
+  height: 45px;
   border-radius: 4px;
   background-color: #EC1F46;
   border: none;
@@ -911,6 +966,7 @@ template {
   min-width: 65px;
   max-width: 100px;
   overflow: hidden;
+  border-radius: 0;
   right: 0;
   top: 0;
   height: 100%;
@@ -1562,11 +1618,6 @@ template {
 }
 
 .footer__input {
-  background-color: #ffffff;
-  border-radius: 4px;
-  border: none;
-  padding: 0 23px;
-  height: 50px;
   margin-bottom: 15px;
   -ms-flex-preferred-size: 48%;
       flex-basis: 48%;
@@ -1577,33 +1628,10 @@ template {
 }
 
 .footer__message {
-  background-color: #ffffff;
-  border-radius: 4px;
-  padding: 18px 24px;
-  border: none;
+  height: 123px;
   -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
   margin-bottom: 23px;
-  height: 123px;
-  font-style: normal;
-  font-weight: normal;
-  font-size: 12px;
-  line-height: 15px;
-  resize: none;
-}
-
-.footer__button {
-  min-width: 160px;
-  min-height: 50px;
-  padding: 18px;
-  border: none;
-  background-color: #EC1F46;
-  color: #ffffff;
-  border-radius: 4px;
-  font-style: normal;
-  font-weight: bold;
-  font-size: 12px;
-  line-height: 15px;
 }
 
 .footer__info {
@@ -1634,6 +1662,92 @@ template {
       -ms-flex-pack: justify;
           justify-content: space-between;
   width: 283px;
+}
+
+.modal__overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0, 143, 223, 0.39);
+  z-index: 100;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: opacity 0.2s;
+  transition: opacity 0.2s;
+}
+
+.modal__overlay--visible {
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal__dialog {
+  position: fixed;
+  top: 35.5%;
+  left: 50%;
+  max-width: 478px;
+  padding: 33px 88px;
+  background-color: #0A223D;
+  -webkit-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%);
+  border-radius: 8px;
+  color: #ffffff;
+  z-index: 101;
+  visibility: hidden;
+  opacity: 0;
+  -webkit-transition: opacity 0.2s;
+  transition: opacity 0.2s;
+  max-height: calc( 100% - 30px);
+  overflow-y: auto;
+}
+
+.modal__dialog--visible {
+  visibility: visible;
+  opacity: 1;
+}
+
+.modal__close {
+  position: absolute;
+  right: 18px;
+  top: 17px;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.modal__title {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 23px;
+  text-transform: uppercase;
+  margin-top: 0;
+  margin-bottom: 15px;
+  text-align: center;
+}
+
+.modal__input {
+  width: 100%;
+  margin-bottom: 15px;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+}
+
+.modal__message {
+  width: 100%;
+  min-height: 123px;
+  margin-bottom: 15px;
+}
+
+.modal__info {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 15px;
+  color: #bdbdbd;
 }
 
 @media (max-width: 1200px) {
@@ -1667,6 +1781,9 @@ template {
   }
   .flash-card__title {
     margin-bottom: 20px;
+  }
+  .modal__dialog {
+    top: 50%;
   }
 }
 
@@ -1833,6 +1950,15 @@ template {
     grid-column: span 7;
     margin-top: 8px;
   }
+  .modal__dialog {
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+  .modal__button {
+    -ms-flex-preferred-size: 100%;
+        flex-basis: 100%;
+    margin-bottom: 10px;
+  }
 }
 
 @media (max-width: 767px) {
@@ -1914,6 +2040,7 @@ template {
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+    outline: none;
   }
   .menu-button__line {
     width: 16px;
@@ -2024,6 +2151,10 @@ template {
   }
   .bottom__pages {
     margin-right: 150px;
+  }
+  .modal__dialog {
+    padding-left: 20px;
+    padding-right: 20px;
   }
 }
 
