--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -23,6 +23,9 @@
     .flash-card
         &__title
             margin-bottom: 20px
+    .modal
+        &__dialog
+            top: 50%
 @media (max-width: 992px)
     .container, .newsletter-wrapper
         max-width: 700px
@@ -134,6 +137,14 @@
         &__bottom
             grid-column: span 7
             margin-top: 8px
+    .modal
+        &__dialog
+            padding-left: 50px
+            padding-right: 50px
+        &__button
+            flex-basis: 100%
+            margin-bottom: 10px
+        
 @media (max-width: 767px)
     .container
         max-width: 576px
@@ -267,6 +278,10 @@
     .bottom
         &__pages
             margin-right: 150px
+    .modal
+        &__dialog
+            padding-left: 20px
+            padding-right: 20px
 @media (max-width: 576px)              
     .logo__image
         width: 99px
