--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -9,3 +9,41 @@ body
     margin: auto
 img
     max-width: 100%
+.input
+    background-color: $light
+    border-radius: 4px
+    border: none
+    padding: 0 23px
+    height: 50px
+.message
+    background-color: $light
+    border-radius: 4px
+    padding: 18px 24px
+    border: none
+    font-style: normal
+    font-weight: normal
+    font-size: 12px
+    line-height: 15px
+    resize: none
+.button
+    outline: none
+    cursor: pointer
+    min-width: 160px
+    min-height: 50px
+    padding: 18px
+    border: none
+    background-color: $primary
+    color: $light
+    border-radius: 4px
+    font-style: normal
+    font-weight: bold
+    font-size: 12px
+    line-height: 15px
+.form
+    display: flex
+    align-items: center
+    justify-content: space-between
+    flex-wrap: wrap
+input
+    outline: none
+    cursor: pointer
