--- a/sass/blocks/_hotel.sass
+++ b/sass/blocks/_hotel.sass
@@ -109,7 +109,7 @@
     color: $light
     border-radius: 8px
     width: 350px
-    min-height: 210px
+    height: 210px
     padding: 28px
     font-family: 'Nunito', sans-serif
     word-break: break-word
@@ -151,7 +151,7 @@
         display: flex
         justify-content: space-between
         align-items: center
-        margin-bottom: 17px
+        margin-bottom: 13px
     &__heading
         font-style: normal
         font-weight: 600
@@ -173,7 +173,7 @@
         font-size: 14px
         line-height: 19px
         width: 100%
-        min-height: 45px
+        height: 45px
         border-radius: 4px
         background-color: $primary
         border: none
