--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -58,6 +58,7 @@
         min-width: 65px
         max-width: 100px
         overflow: hidden
+        border-radius: 0
         right: 0
         top: 0
         height: 100%
